Change scm info

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,15 +18,15 @@ org.gradle.jvmargs=-Xmx1536m
 
 VERSION_NAME=2.0.0
 VERSION_CODE=200
-GROUP=com.readystatesoftware.chuck
+GROUP=fr.o80.chucky
 
 POM_DESCRIPTION=Android in-app HTTP inspector
-POM_URL=https://github.com/jgilfelt/chuck
-POM_SCM_URL=https://github.com/jgilfelt/chuck
-POM_SCM_CONNECTION=scm:git@github.com:jgilfelt/chuck.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:jgilfelt/chuck.git
+POM_URL=https://github.com/olivierperez/chucky
+POM_SCM_URL=https://github.com/olivierperez/chucky
+POM_SCM_CONNECTION=scm:git@github.com:olivierperez/chucky.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:olivierperez/chucky.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=jgilfelt
-POM_DEVELOPER_NAME=Jeff Gilfelt
+POM_DEVELOPER_ID=olivierperez
+POM_DEVELOPER_NAME=Olivier Perez
