--- a/gradle.properties
+++ b/gradle.properties
@@ -16,17 +16,17 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=2.0.0
-VERSION_CODE=200
+VERSION_NAME=2.0.1
+# 2*10*10 + 0*10 + 1 => 20001
+VERSION_CODE=20001
 GROUP=fr.o80.chucky
 
+POM_REPO_NAME=Chucky
+POM_GITHUB_REPO=olivierperez/chucky
 POM_DESCRIPTION=Android in-app HTTP inspector
 POM_URL=https://github.com/olivierperez/chucky
-POM_SCM_URL=https://github.com/olivierperez/chucky
-POM_SCM_CONNECTION=scm:git@github.com:olivierperez/chucky.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:olivierperez/chucky.git
+POM_ISSUE_TRACKER=https://github.com/olivierperez/chucky/issues
+POM_SCM_CONNECTION=https://github.com/olivierperez/chucky.git
+POM_LICENCE=Apache-2.0
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=olivierperez
-POM_DEVELOPER_NAME=Olivier Perez
