Rename every Chucky ref to Chucker

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,14 +19,14 @@ org.gradle.jvmargs=-Xmx1536m
 VERSION_NAME=2.0.1
 # 2*10*10 + 0*10 + 1 => 20001
 VERSION_CODE=20001
-GROUP=fr.o80.chucky
+GROUP=fr.o80.chucker
 
-POM_REPO_NAME=Chucky
-POM_GITHUB_REPO=olivierperez/chucky
+POM_REPO_NAME=Chucker
+POM_GITHUB_REPO=ChuckerTeam/chucker
 POM_DESCRIPTION=Android in-app HTTP inspector
-POM_URL=https://github.com/olivierperez/chucky
-POM_ISSUE_TRACKER=https://github.com/olivierperez/chucky/issues
-POM_SCM_CONNECTION=https://github.com/olivierperez/chucky.git
+POM_URL=https://github.com/ChuckerTeam/chucker
+POM_ISSUE_TRACKER=https://github.com/ChuckerTeam/chucker/issues
+POM_SCM_CONNECTION=https://github.com/ChuckerTeam/chucker.git
 POM_LICENCE=Apache-2.0
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
