--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ ext {
     targetSdkVersion = 28
     compileSdkVersion = 28
 
+    constraintLayoutVersion = '1.1.3'
     supportLibVersion = '28.0.0'
     okhttp3Version = '3.11.0'
     retrofitVersion = '2.3.0'
