--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -15,10 +15,21 @@ android {
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+        }
+    }
+
+    signingConfigs {
+        debug {
+            keyAlias 'chucker'
+            keyPassword 'android'
+            storeFile file('debug.keystore')
+            storePassword 'android'
         }
     }
 }
