--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.20'
     ext.dokka_version = '0.9.17'
 
     repositories {
@@ -10,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.1.1"
@@ -43,8 +43,9 @@ ext {
 
     constraintLayoutVersion = '1.1.3'
     supportLibVersion = '28.0.0'
-    okhttp3Version = '3.11.0'
-    retrofitVersion = '2.3.0'
+    okhttp3Version = '3.12.1'
+    retrofitVersion = '2.5.0'
     gsonVersion = '2.8.5'
     cupboardVersion= '2.2.0'
+    junitVersion = '5.3.2'
 }
