--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,20 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    ext.kotlin_version = '1.3.20'
-    ext.dokka_version = '0.9.17'
+    ext {
+        androidGradleVersion = '3.4.0'
+        androidMavenGradleVersion = '2.1'
+        constraintLayoutVersion = '1.1.3'
+        cupboardVersion= '2.2.0'
+        dokkaVersion = '0.9.17'
+        gradleBintrayVersion = '1.8.4'
+        gsonVersion = '2.8.5'
+        junitGradlePluignVersion = '1.3.1.1'
+        junitVersion = '5.3.2'
+        kotlinVersion = '1.3.20'
+        okhttp3Version = '3.12.1'
+        retrofitVersion = '2.5.0'
+        roomVersion = '1.1.1'
+        supportLibVersion = '28.0.0'
+    }
 
     repositories {
         jcenter()
@@ -10,15 +22,12 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$androidGradleVersion"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:$androidMavenGradleVersion"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$gradleBintrayVersion"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:$junitGradlePluignVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokkaVersion"
     }
 }
 
@@ -40,13 +49,4 @@ ext {
     minSdkVersion = 16
     targetSdkVersion = 28
     compileSdkVersion = 28
-
-    constraintLayoutVersion = '1.1.3'
-    supportLibVersion = '28.0.0'
-    okhttp3Version = '3.12.1'
-    retrofitVersion = '2.5.0'
-    roomVersion = '1.1.1'
-    gsonVersion = '2.8.5'
-    cupboardVersion= '2.2.0'
-    junitVersion = '5.3.2'
 }
