Updated Group to the GitHub one

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ org.gradle.jvmargs=-Xmx1536m
 VERSION_NAME=2.1.0-SNAPSHOT
 # 2*100*100 + 1*100 + 0 => 20100
 VERSION_CODE=20100
+GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
 POM_GITHUB_REPO=ChuckerTeam/chucker
