--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=2.1.0-SNAPSHOT
-# 2*100*100 + 1*100 + 0 => 20100
-VERSION_CODE=20100
+VERSION_NAME=3.0.0-alpha1
+# 3*100*100 + 0*100 + 0 => 30000
+VERSION_CODE=30000
 GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
