--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -24,3 +24,4 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+apply from: rootProject.file('gradle/kotlin-static-analysis.gradle')
