--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -5,3 +5,17 @@ build:
     # LongParameterList: 1
     # style: 1
     # comments: 1
+
+complexity:
+  active: true
+  ComplexCondition:
+    active: true
+    threshold: 5
+
+style:
+  ReturnCount:
+    active: true
+    max: 5
+    excludedFunctions: "equals"
+    excludeLabeled: false
+    excludeReturnFromLambda: true
