--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         junitGradlePluignVersion = '1.3.1.1'
         junitVersion = '5.4.2'
         kotlinVersion = '1.3.31'
-        mockitoVersion = '2.28.2'
+        mockkVersion = '1.9.3'
         okhttp3Version = '3.12.2'
         retrofitVersion = '2.5.0'
         roomVersion = '1.1.1'
