--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,6 +36,10 @@ android {
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     debugImplementation project(':library')
     releaseImplementation project(':library-no-op')
@@ -45,6 +49,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3Version"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    implementation 'com.github.AniTrend:retrofit-graphql:0.10.1'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 }
