--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         gsonVersion = '2.8.5'
         junitGradlePluignVersion = '1.3.1.1'
         junitVersion = '5.4.2'
-        leakcanary = "1.6.3"
+        leakcanary = "2.0-beta-2"
         kotlinVersion = '1.3.41'
         mockkVersion = '1.9.3'
         okhttp3Version = '3.12.2'
