--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        androidGradleVersion = '3.4.1'
+        androidGradleVersion = '3.4.2'
         androidMavenGradleVersion = '2.1'
         constraintLayoutVersion = '1.1.3'
         dokkaVersion = '0.9.17'
@@ -8,13 +8,14 @@ buildscript {
         gsonVersion = '2.8.5'
         junitGradlePluignVersion = '1.3.1.1'
         junitVersion = '5.4.2'
-        leakcanary = "1.6.3"
         kotlinVersion = '1.3.41'
+        leakcanary = '2.0-beta-2'
+        material = '1.1.0-alpha09'
         mockkVersion = '1.9.3'
         okhttp3Version = '3.12.2'
         retrofitVersion = '2.5.0'
-        roomVersion = '1.1.1'
-        supportLibVersion = '28.0.0'
+        roomVersion = '2.1.0'
+        supportLibVersion = '1.1.0-rc01'
     }
 
     repositories {
