--- a/gradle/kotlin-static-analysis.gradle
+++ b/gradle/kotlin-static-analysis.gradle
@@ -19,7 +19,7 @@ ktlint {
 }
 
 detekt {
-    toolVersion = "1.0.0-RC14"
+    toolVersion = "1.0.1"
     config = files("../detekt-config.yml")
     buildUponDefaultConfig = true
     filters = ".*/resources/.*,.*/build/.*"
