Replace deprecated properties in build files

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -11,7 +11,7 @@ android {
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+    archiveClassifier.set('sources')
 }
 
 artifacts {
