--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -21,6 +21,7 @@ artifacts {
 dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp3Version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "androidx.fragment:fragment:$fragmentVersion"
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
