--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         retrofitVersion = '2.5.0'
         roomVersion = '2.1.0'
         supportLibVersion = '1.1.0-rc01'
+        viewPager2Version = '1.0.0'
     }
 
     repositories {
