--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     ext {
-        androidGradleVersion = '3.4.2'
+        androidGradleVersion = '3.5.2'
         androidMavenGradleVersion = '2.1'
+        appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
         dokkaVersion = '0.9.17'
         gradleBintrayVersion = '1.8.4'
@@ -9,13 +10,12 @@ buildscript {
         junitGradlePluignVersion = '1.3.1.1'
         junitVersion = '5.4.2'
         kotlinVersion = '1.3.50'
-        leakcanary = '2.0-beta-2'
-        material = '1.1.0-beta01'
+        leakcanaryVersion = '2.0-beta-4'
+        materialComponentsVersion = '1.1.0-beta02'
         mockkVersion = '1.9.3'
         okhttp3Version = '3.12.2'
         retrofitVersion = '2.5.0'
         roomVersion = '2.1.0'
-        supportLibVersion = '1.1.0-rc01'
     }
 
     repositories {
