--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -40,12 +40,12 @@ dependencies {
     debugImplementation project(':library')
     releaseImplementation project(':library-no-op')
 
-    implementation "com.google.android.material:material:$material"
-    implementation "androidx.appcompat:appcompat:$supportLibVersion"
+    implementation "com.google.android.material:material:$materialComponentsVersion"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3Version"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanary"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 }
