--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,23 @@
 buildscript {
     ext {
-        androidGradleVersion = '3.5.2'
+        androidGradleVersion = '3.5.3'
         androidMavenGradleVersion = '2.1'
         appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
-        detektVersion = '1.1.1'
+        detektVersion = '1.4.0'
         dokkaVersion = '0.10.0'
         gradleBintrayVersion = '1.8.4'
         gsonVersion = '2.8.6'
         junitGradlePluignVersion = '1.3.1.1'
         junitVersion = '5.4.2'
-        kotlinVersion = '1.3.50'
+        kotlinVersion = '1.3.61'
         ktLintVersion = '9.1.1'
-        leakcanaryVersion = '2.0-beta-4'
-        materialComponentsVersion = '1.1.0-beta02'
+        leakcanaryVersion = '2.1'
+        materialComponentsVersion = '1.1.0-rc02'
         mockkVersion = '1.9.3'
         okhttp3Version = '3.12.6'
-        retrofitVersion = '2.6.2'
-        roomVersion = '2.1.0'
+        retrofitVersion = '2.6.4'
+        roomVersion = '2.2.3'
         viewModelVersion = '2.1.0'
     }
 
