--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,33 @@
 buildscript {
     ext {
+        kotlinVersion = '1.3.61'
         androidGradleVersion = '3.5.3'
-        androidMavenGradleVersion = '2.1'
+
+        // Google libraries
         appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
-        detektVersion = '1.4.0'
-        dokkaVersion = '0.10.0'
-        gradleBintrayVersion = '1.8.4'
-        gsonVersion = '2.8.6'
-        junitGradlePluignVersion = '1.3.1.1'
-        junitVersion = '5.4.2'
-        kotlinVersion = '1.3.61'
-        ktLintVersion = '9.1.1'
-        leakcanaryVersion = '2.1'
         materialComponentsVersion = '1.1.0-rc02'
-        mockkVersion = '1.9.3'
+        roomVersion = '2.2.3'
+        lifecycleVersion = '2.2.0'
+
+        // Publishing
+        androidMavenGradleVersion = '2.1'
+
+        // Networking
+        gsonVersion = '2.8.6'
         okhttp3Version = '3.12.6'
         retrofitVersion = '2.6.4'
-        roomVersion = '2.2.3'
-        viewModelVersion = '2.2.0'
+
+        // Debug and quality control
+        detektVersion = '1.4.0'
+        dokkaVersion = '0.10.0'
+        ktLintVersion = '9.1.1'
+        leakcanaryVersion = '2.1'
+
+        // Testing
+        junitGradlePluignVersion = '1.3.1.1'
+        junitVersion = '5.4.2'
+        mockkVersion = '1.9.3'
     }
 
     repositories {
