--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         // Google libraries
         appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
-        materialComponentsVersion = '1.1.0-rc02'
+        materialComponentsVersion = '1.1.0'
         roomVersion = '2.2.3'
         lifecycleVersion = '2.2.0'
 
