Remove supportsRTL tag from Manifest, update Gradle plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,8 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 
+android.useAndroidX=true
+
 VERSION_NAME=3.1.2
 # 3*100*100 + 1*100 + 2 => 30102
 VERSION_CODE=30102
