--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         materialComponentsVersion = '1.1.0'
         roomVersion = '2.2.3'
         lifecycleVersion = '2.2.0'
-        androidXCore = '2.1.0'
+        androidXCoreVersion = '2.1.0'
 
         // Publishing
         androidMavenGradleVersion = '2.1'
@@ -29,6 +29,7 @@ buildscript {
         junitGradlePluignVersion = '1.3.1.1'
         junitVersion = '5.4.2'
         mockkVersion = '1.9.3'
+        truthVersion = '1.0.1'
     }
 
     repositories {
