Add default repo token

--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -10,6 +10,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Stale run canceller
       uses: yellowmegaman/gh-build-canceller@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Validate Gradle Wrapper
       uses: gradle/wrapper-validation-action@v1
       
