--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -1,5 +1,5 @@
 name: Pre Merge Checks
-on: [push, pull_request]
+on: pull_request
 
 jobs:
   gradle:
@@ -7,10 +7,5 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
-    - name: Stale run canceller
-      uses: yellowmegaman/gh-build-canceller@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        workflows_filter: "Validate Gradle Wrapper|Pre Merge Checks"
-    - name: Run Gradle preMerge task
+    - name: Run Gradle tasks
       run: ./gradlew clean ktlintCheck lint detekt build test
