--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,5 +1,12 @@
 name: Validate Gradle Wrapper
-on: pull_request
+on: 
+  push:
+      branches:
+      - develop 
+      - release
+  pull_request:
+    branches: 
+      - '*'
 
 jobs:
   validation:
