--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -1,5 +1,12 @@
 name: Pre Merge Checks
-on: pull_request
+on: 
+  push:
+    branches:
+      - develop 
+      - release
+  pull_request:
+    branches: 
+      - '*'
 
 jobs:
   gradle:
