--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,10 +1,20 @@
 name: Validate Gradle Wrapper
-on: [push, pull_request]
+on: 
+  push:
+      branches:
+      - develop 
+      - release
+  pull_request:
+    branches: 
+      - '*'
 
 jobs:
   validation:
     name: Validation
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: gradle/wrapper-validation-action@v1
+    - name: Checkout latest code
+      uses: actions/checkout@v2
+    - name: Validate Gradle Wrapper
+      uses: gradle/wrapper-validation-action@v1
+      
