--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         kotlinVersion = '1.3.70'
         androidGradleVersion = '3.6.0'
+        coroutineVersion = '1.3.4'
 
         // Google libraries
         appCompatVersion = '1.1.0'
