--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ buildscript {
     ext {
         kotlinVersion = '1.3.70'
         androidGradleVersion = '3.6.0'
+        coroutineVersion = '1.3.4'
 
         // Google libraries
         appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
         materialComponentsVersion = '1.1.0'
-        roomVersion = '2.2.3'
+        roomVersion = '2.2.5'
         lifecycleVersion = '2.2.0'
         androidXCoreVersion = '2.1.0'
 
