--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,11 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 
-VERSION_NAME=3.1.2
-# 3*100*100 + 1*100 + 2 => 30102
-VERSION_CODE=30102
+android.useAndroidX=true
+
+VERSION_NAME=3.2.0
+# 3*100*100 + 2*100 + 0 => 30200
+VERSION_CODE=30200
 GROUP=com.github.chuckerteam.chucker
 
 POM_REPO_NAME=Chucker
