--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,37 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.61'
-        androidGradleVersion = '3.5.3'
+        kotlinVersion = '1.3.71'
+        androidGradleVersion = '3.6.1'
+        coroutineVersion = '1.3.5'
 
         // Google libraries
         appCompatVersion = '1.1.0'
         constraintLayoutVersion = '1.1.3'
-        materialComponentsVersion = '1.1.0-rc02'
-        roomVersion = '2.2.3'
+        materialComponentsVersion = '1.1.0'
+        roomVersion = '2.2.5'
         lifecycleVersion = '2.2.0'
+        androidXCoreVersion = '2.1.0'
 
         // Publishing
         androidMavenGradleVersion = '2.1'
 
         // Networking
         gsonVersion = '2.8.6'
-        okhttp3Version = '3.12.6'
+        okhttp3Version = '3.12.10'
         retrofitVersion = '2.6.4'
 
         // Debug and quality control
-        detektVersion = '1.4.0'
-        dokkaVersion = '0.10.0'
-        ktLintVersion = '9.1.1'
-        leakcanaryVersion = '2.1'
+        detektVersion = '1.7.4'
+        dokkaVersion = '0.10.1'
+        ktLintVersion = '0.36.0'
+        ktLintGradleVersion = '9.2.1'
+        leakcanaryVersion = '2.2'
 
         // Testing
-        junitGradlePluignVersion = '1.3.1.1'
-        junitVersion = '5.4.2'
+        junitGradlePluignVersion = '1.6.0.0'
+        junitVersion = '5.6.0'
         mockkVersion = '1.9.3'
+        truthVersion = '1.0.1'
     }
 
     repositories {
@@ -43,7 +47,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:$detektVersion"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktLintVersion"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktLintGradleVersion"
     }
 }
 
@@ -63,6 +67,6 @@ task clean(type: Delete) {
 
 ext {
     minSdkVersion = 16
-    targetSdkVersion = 28
-    compileSdkVersion = 28
+    targetSdkVersion = 29
+    compileSdkVersion = 29
 }
