Enforce Lint findings

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -11,6 +11,11 @@ android {
     defaultConfig {
         minSdkVersion rootProject.minSdkVersion
     }
+
+    lintOptions {
+        warningsAsErrors true
+        abortOnError true
+    }
 }
 
 task sourcesJar(type: Jar) {
