--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -33,15 +33,11 @@ jobs:
     - name: Run detekt
       run: ./gradlew detekt
 
-    - name: Build Chucker
-      run: ./gradlew build
-
     - name: Run all the tests
       run: ./gradlew test
 
-    - name: Run all the other checks
-      run: ./gradlew check
-
+    - name: Build everything
+      run: ./gradlew build
 
     # We stop gradle at the end to make sure the cache folders
     # don't contain any lock files and are free to be cached.
