--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.72'
+        kotlinVersion = System.getenv("KOTLIN_VERSION") ?: '1.3.72'
         androidGradleVersion = '3.6.1'
         coroutineVersion = '1.3.5'
 
@@ -39,6 +39,7 @@ buildscript {
         jcenter()
         google()
         gradlePluginPortal()
+        maven { url("https://dl.bintray.com/kotlin/kotlin-eap") }
     }
 
     dependencies {
@@ -59,6 +60,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven { url("https://dl.bintray.com/kotlin/kotlin-eap") }
     }
 }
 
