Add build step to upload build artifact

--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -12,6 +12,15 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
+    - name: Publish to Maven Local
+      run: ./gradlew publishToMavenLocal
+
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: 'chucker-snapshot-artifacts'
+        path: '~/.m2/repository/'
+
     - name: Publish to the Snapshot Repository
       run: ./gradlew publishReleasePublicationToStagingRepository
       env:
