--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -53,6 +53,12 @@ jobs:
     - name: Publish to Maven Local
       run: ./gradlew publishToMavenLocal
 
+    - name: Upload Build Artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: 'chucker-local-artifacts'
+        path: '~/.m2/repository/'
+
     # We stop gradle at the end to make sure the cache folders
     # don't contain any lock files and are free to be cached.
     - name: Stop Gradle
