--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -59,7 +59,7 @@ jobs:
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: 'chucker-local-artifacts'
+        name: 'chucker-local-artifacts-${{ matrix.kotlin-version }}'
         path: '~/.m2/repository/'
 
     # We stop gradle at the end to make sure the cache folders
