Make some dependencies api in library build.gradle (#418)
* Make some dependencies api in library build.gradle
Fixes #415
* Update based on code review

--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation "com.squareup.okhttp3:okhttp:$okhttp3Version"
+    api "com.squareup.okhttp3:okhttp:$okhttp3Version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 }
 
