Add manual trigger for Github Actions workflows (#436)

--- a/.github/workflows/gradle-wrapper-validation.yml
+++ b/.github/workflows/gradle-wrapper-validation.yml
@@ -1,11 +1,14 @@
 name: Validate Gradle Wrapper
-on: 
+on:
   push:
       branches:
       - develop 
       - release
   pull_request:
     branches: 
+      - '*'
+  workflow_dispatch:
+    branches:
       - '*'
 
 jobs:
