Update OkHttp and bump min SDK to 21 (#500)
- Upgrade min SDK to 21
- Bump OkHttp to 4.9.0 and replace deprecated methods.
- Bump Retrofit to 2.9.0.
- Fix Lint issues due to min SDK bump (and some other minor ones).
- Remove OkHttp and Retrofit from Dependabot ignore list.

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,8 @@ buildscript {
 
         // Networking
         gsonVersion = '2.8.6'
-        okhttp3Version = '3.12.10'
-        retrofitVersion = '2.6.4'
+        okhttpVersion = '4.9.0'
+        retrofitVersion = '2.9.0'
 
         // Debug and quality control
         detektVersion = '1.14.0'
@@ -80,7 +80,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    minSdkVersion = 16
+    minSdkVersion = 21
     targetSdkVersion = 30
     compileSdkVersion = 30
 }
