Optimize gradle config

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -59,7 +59,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
 }
 
 dependencies {
