--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -4,9 +4,10 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion rootProject.compileSdkVersion
 
-    compileOptions {
-        kotlinOptions.freeCompilerArgs += [
-            '-module-name', "com.github.ChuckerTeam.Chucker.library-no-op",
+    kotlinOptions {
+        freeCompilerArgs += [
+            '-module-name',
+            "com.github.ChuckerTeam.Chucker.library-no-op",
             "-Xexplicit-api=strict"
         ]
     }
