--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,42 @@
 buildscript {
     ext {
-        kotlinVersion = '1.4.10'
-        androidGradleVersion = '4.1.0'
-        coroutineVersion = '1.4.0'
+        kotlinVersion = '1.5.10'
+        androidGradleVersion = '4.2.1'
+        coroutineVersion = '1.4.3'
 
         // Google libraries
-        appCompatVersion = '1.2.0'
+        activityVersion = '1.2.3'
+        appCompatVersion = '1.3.0'
         constraintLayoutVersion = '2.0.4'
-        materialComponentsVersion = '1.2.1'
-        roomVersion = '2.2.5'
-        fragmentVersion = '1.2.5'
-        lifecycleVersion = '2.2.0'
+        materialComponentsVersion = '1.3.0'
+        roomVersion = '2.3.0'
+        fragmentVersion = '1.3.5'
+        lifecycleVersion = '2.3.1'
         androidXCoreVersion = '2.1.0'
         paletteKtxVersion = '1.0.0'
 
         // Networking
-        gsonVersion = '2.8.6'
-        okhttp3Version = '3.12.10'
+        gsonVersion = '2.8.7'
+        okhttpVersion = '3.12.10'
         retrofitVersion = '2.6.4'
 
         // Debug and quality control
-        detektVersion = '1.14.0'
-        dokkaVersion = '1.4.10.2'
-        ktLintVersion = '0.39.0'
-        ktLintGradleVersion = '9.4.0'
-        leakcanaryVersion = '2.5'
+        detektVersion = '1.17.1'
+        dokkaVersion = '1.4.32'
+        ktLintGradleVersion = '10.0.0'
+        leakcanaryVersion = '2.7'
 
         // Testing
         androidxTestCoreVersion = '1.3.0'
-        junitGradlePluignVersion = '1.6.2.0'
-        junitVersion = '5.7.0'
-        mockkVersion = '1.10.2'
-        robolectricVersion = '4.4'
-        truthVersion = '1.1'
+        junitGradlePluignVersion = '1.7.1.1'
+        junitVersion = '5.7.2'
+        mockkVersion = '1.11.0'
+        robolectricVersion = '4.5.1'
+        truthVersion = '1.1.3'
         vintageJunitVersion = '4.13'
     }
 
     repositories {
-        jcenter()
         google()
         gradlePluginPortal()
     }
@@ -57,8 +56,14 @@ allprojects {
     group = GROUP
 
     repositories {
-        jcenter()
         google()
+        mavenCentral()
+        jcenter {
+            content {
+                includeModule("org.jetbrains.trove4j", "trove4j")
+                includeModule("org.jetbrains.kotlinx", "kotlinx-html-jvm")
+            }
+        }
     }
 
     tasks.withType(Test) {
