--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -14,6 +14,7 @@ android {
 
     buildFeatures {
         viewBinding = true
+        buildConfig = false
     }
 
     buildTypes {
@@ -41,21 +42,34 @@ android {
     lintOptions {
         warningsAsErrors true
         abortOnError true
+        disable 'AcceptsUserCertificates'
+        // Don't fail build if some dependencies outdated
+        disable 'GradleDependency'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions.jvmTarget = "1.8"
 }
 
 dependencies {
     debugImplementation project(':library')
     releaseImplementation project(':library-no-op')
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
     implementation "com.google.android.material:material:$materialComponentsVersion"
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3Version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
 }
 
 apply from: rootProject.file('gradle/kotlin-static-analysis.gradle')
