Remove breaking change with BuildConfig removal

--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -95,6 +95,10 @@ afterEvaluate {
                             name = 'Olivier Perez'
                             email = 'olivier@olivierperez.fr'
                         }
+                        developer {
+                            id = 'michalsikora90'
+                            name = 'Michal Sikora'
+                        }
                     }
                 }
             }
