--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -97,7 +97,7 @@ afterEvaluate {
                         }
                         developer {
                             id = 'michalsikora90'
-                            name = 'Michal Sikora'
+                            name = 'Michał Sikora'
                         }
                     }
                 }
