--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.parallel=true
 
 android.useAndroidX=true
 
+android.enableJetifier=true
 VERSION_NAME=4.0.0-SNAPSHOT
 # 4*100*100 + 0*100 + 0 => 40000
 VERSION_CODE=40000
