feat/EXP-90 changes for highlight/expand/collapse json viewer

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ buildscript {
         lifecycleVersion = '2.2.0'
         androidXCoreVersion = '2.1.0'
         paletteKtxVersion = '1.0.0'
-
+        jsonhandleviewVersion = '1.2.2'
+        
         // Networking
         gsonVersion = '2.8.6'
         okhttp3Version = '3.12.10'
