feat/EXP-90 changes for highlight/expand/collapse json viewer

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         androidXCoreVersion = '2.1.0'
         paletteKtxVersion = '1.0.0'
         jsonhandleviewVersion = '1.2.2'
-        
+
         // Networking
         gsonVersion = '2.8.6'
         okhttp3Version = '3.12.10'
@@ -59,6 +59,7 @@ allprojects {
 
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
         google()
     }
 
